// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Listbox should render properly 1`] = `
.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: 1px solid transparent;
  border: none;
  background-color: #808080;
  border-radius: 2px;
  cursor: pointer;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-3 {
  background-color: #808080;
  padding: 0;
  outline: none;
  border: none;
}

.emotion-3:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-2 {
  margin: 0;
  overflow: auto;
  height: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  border-radius: 2px;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-4"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      Select Type
    </ListboxButton>
    <ListboxPopover
      className="emotion-3"
    >
      <ListboxList
        className="emotion-2"
      >
        <ListboxOptions
          options={
            Object {
              "analysis": Object {
                "zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
              },
              "clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "system": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
        />
      </ListboxList>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly 2`] = `
.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: 1px solid transparent;
  border: none;
  background-color: #808080;
  border-radius: 2px;
  cursor: pointer;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-3 {
  background-color: #808080;
  padding: 0;
  outline: none;
  border: none;
}

.emotion-3:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-2 {
  margin: 0;
  overflow: auto;
  height: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  border-radius: 2px;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-4"
    defaultValue=""
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      Select Type
    </ListboxButton>
    <ListboxPopover
      className="emotion-3"
    >
      <ListboxList
        className="emotion-2"
      >
        <ListboxOptions
          options={
            Object {
              "analysis": Object {
                "zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
              },
              "clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "system": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
        />
      </ListboxList>
    </ListboxPopover>
  </ListboxInput>
</label>
`;

exports[`Listbox should render properly with existing attribute 1`] = `
.emotion-0 {
  padding-bottom: 8px;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  outline: 1px solid transparent;
  border: none;
  background-color: #808080;
  border-radius: 2px;
  cursor: pointer;
  color: #ffffff;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 8px;
}

.emotion-3 {
  background-color: #808080;
  padding: 0;
  outline: none;
  border: none;
}

.emotion-3:focus-within {
  outline: none;
  box-shadow: none;
}

.emotion-2 {
  margin: 0;
  overflow: auto;
  height: auto;
  max-height: 350px;
  background-color: #808080;
  color: #ffffff;
  border-radius: 2px;
  font-weight: 500;
  padding-top: 8px;
  padding-bottom: 8px;
}

<label>
  <div
    className="emotion-0"
  >
    Metadata Type
  </div>
  <ListboxInput
    className="emotion-4"
    defaultValue="system.timeCreated"
    onChange={[Function]}
  >
    <ListboxButton
      arrow={
        <Unknown
          color="#ffffff"
          height={20}
        />
      }
      className="emotion-1"
    >
      timeCreated
    </ListboxButton>
    <ListboxPopover
      className="emotion-3"
    >
      <ListboxList
        className="emotion-2"
      >
        <ListboxOptions
          options={
            Object {
              "analysis": Object {
                "zvi": Object {
                  "tinyProxy": "analysis.zvi.tinyProxy",
                },
              },
              "clip": Object {
                "pile": "clip.pile",
                "sourceAssetId": "clip.sourceAssetId",
                "timeline": "clip.timeline",
                "type": "clip.type",
              },
              "location": Object {
                "city": "location.city",
                "code": "location.code",
                "country": "location.country",
              },
              "media": Object {
                "author": "media.author",
                "content": "media.content",
                "description": "media.description",
                "keywords": "media.keywords",
                "orientation": "media.orientation",
                "title": "media.title",
                "type": "media.type",
              },
              "source": Object {
                "extension": "source.extension",
                "filename": "source.filename",
                "mimetype": "source.mimetype",
                "path": "source.path",
              },
              "system": Object {
                "dataSourceId": "system.dataSourceId",
                "jobId": "system.jobId",
                "projectId": "system.projectId",
                "state": "system.state",
                "taskId": "system.taskId",
              },
            }
          }
        />
      </ListboxList>
    </ListboxPopover>
  </ListboxInput>
</label>
`;
